app.log
  File "/app/app.py", line 18
    model = InferenceClientModel(
    ^^^^^
IndentationError: expected an indented block after 'try' statement on line 12
